fix: compile chored: translate more comments to eng